# Marser

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  MGenerator.cpp  Marser.sln  Marser.vcxproj  Marser.vcxproj.filters  ParserTester.txt  README.md  ResultantFile.matt  TestFile.txt  example.matt  plik.mcfg  structureFile.txt  wynikowy.matt
dependencies/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
dependencies/mattcore/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/encryption/: EncryptionRegistry.cpp  EncryptionRegistry.h  EncryptionTypes.h  IEncryptionAlgorithm.cpp  IEncryptionAlgorithm.h  KeyDerivation.cpp  KeyDerivation.h  KeyVault.cpp  KeyVault.h  ShiftEncryption.cpp  ShiftEncryption.h  XorEncryption.cpp  XorEncryption.h
src/io/: EncryptedPackage.h  FileHeader.h  FileLoader.cpp  FileLoader.h  FilePacker.cpp  FilePacker.h  MattFile.cpp  MattFile.h
src/logger/: Logger.cpp  Logger.h
src/matt/encryption/: EncryptionRegistry.cpp  XorEncryption.cpp  XorEncryption.h
src/matt/io/: Constants.h  FileLoader.cpp  FilePacker.cpp  FilePacker.h  MattFile.cpp  MattFile.h
src/matt/parser/: Parser.cpp  Parser.h  Value.cpp
src/matt/utils/: Crc32.cpp
src/parser/: Constants.h  EncryptedPackage.h  FileHeader.h  FileLoader.cpp  FileLoader.h  FilePacker.cpp  FilePacker.h  Parser.cpp  Parser.h  Token.h  Tokenizer.cpp  Tokenizer.h  Value.cpp  Value.h
src/utils/: Crc32.h
tests/: CMakeLists.txt  EncryptionTests.cpp  MattFileTests.cpp  ParserTests.cpp  TokenizerTests.cpp
